k8s/knoxchat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: knoxchat-service
  namespace: knoxchat
spec:
  selector:
    app: knoxchat
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
