k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knoxchat-ingress
  namespace: knoxchat
  labels:
    name: knoxchat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "knoxchat-sticky"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: knoxchat.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: knoxchat-service
            port: 
              number: 5000
